# certamerge

./: .certamerge.yml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.certamerge/evidence/: self-dogfood-action-contract-validation.json  self-dogfood-car-verification.json  self-dogfood-compliance-safe-language.json  self-dogfood-dependency-review.json  self-dogfood-links-valid.json  self-dogfood-no-secret-leakage.json  self-dogfood-no-source-egress.json  self-dogfood-owner-approval.json  self-dogfood-risk-surface-classification.json  self-dogfood-schema-validation.json  self-dogfood-test-result.json  self-dogfood-workflow-validation.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: alpha_feedback.md  bug_report.md  bug_report.yml  evidence_adapter_request.md  feature_request.yml  proof_gap_example.md
.github/workflows/: certamerge-action-validation.yml  certamerge-proof-gate.yml  ci.yml
community/github-action/: action.yml
community/policies/: basic.certamerge.yml
community/tests/: test_community_core.py  test_controlled_alpha_contracts.py  test_evidence_state_contract.py  test_public_release_candidate_contracts.py
docs/community/: agent-workflow.md  ai-boundary.md  alpha-limitations.md  car-integrity.md  car-signing-design.md  car-signing.md  car-spec.md  change-bound-proof.md  compliance-safe-language.md  evidence-adapters.md  examples.md  faq.md  feedback.md  github-action-validation.md  github-action.md  local-recover.md  no-source-egress.md  policies.md  pr-diff-aware-proof.md  quickstart.md  recover.md  repair-missions.md  repository-boundary.md  self-dogfooding.md  suggest-policy.md  verifier.md
docs/demo/: 5_MINUTE_PUBLIC_ALPHA_DEMO.md  SAMPLE_OUTPUTS.md
docs/release/: CAR_INTEGRITY_RELEASE_DECISION.md  CAR_SIGNING_V0_DECISION_REPORT.md  CERTAMERGE_EVOLUTIONARY_PRODUCT_HARDENING_REPORT.md  CERTAMERGE_OPEN_SOURCE_FINAL_PRODUCT_READINESS_REPORT.md  CERTAMERGE_OPEN_SOURCE_GRAND_FINALE_REPORT.md  CERTAMERGE_OPEN_SOURCE_PRODUCTION_READINESS_REPORT.md  (+40 more)
scripts/: cgf_wth_open_source.py  cppef_open_source.py  generate_checksums.py
(+102 files in other folders)
