[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "certamerge"
version = "0.1.0"
description = "ProofOps CLI for evidence-backed change authorization"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "CertaMerge maintainers"}
]
keywords = ["proofops", "change-authorization", "ci", "policy", "audit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Security"
]
dependencies = [
  "typer>=0.9",
  "PyYAML>=6.0",
  "jsonschema>=4.0",
  "pydantic>=2.0"
]

[project.scripts]
certamerge = "certamerge.cli:app"

[tool.setuptools.packages.find]
where = ["community/cli"]

[tool.pytest.ini_options]
testpaths = ["community/tests"]
pythonpath = ["community/cli"]
